# swaybar

./: Cargo.toml  README.md  build.rs
src/: datetime.rs  idle.rs  main.rs  pauza.rs  power.rs  swaybar.rs  wifi.rs
