[package]
name = "swaybar"
version = "0.1.0"
authors = ["git@tristan.rs"]
edition = "2018"

[dependencies]
wayland-client = "0.28"
wayland-commons = "0.28"
crossbeam-channel = "0.5"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"

[build-dependencies]
wayland-scanner = "0.28"